# gpui-flowtext

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  collaboration.rs  demo.rs  lib.rs
src/document/: blocks.rs  core.rs  mod.rs  position.rs  run_styles.rs  text.rs  theme.rs
src/edit_ops/: fragments.rs  insert_delete.rs  mod.rs  mutate.rs  offsets.rs  rich_fragment.rs  selection_styles.rs  split_delete.rs  styles.rs  text.rs
src/persistence/: codec.rs  io.rs  mod.rs  records.rs  validation.rs
src/rich_text/: element.rs  invisibility.rs  mod.rs  paint.rs  selection.rs  tools.rs  word_boundary.rs
src/rich_text/benchmarks/: layout.rs  mod.rs  operations.rs  reports.rs  runner.rs  sources_stats.rs  suite.rs  tables.rs  utilities.rs
src/rich_text/editor/: action_handlers.rs  block_helpers.rs  block_insertion.rs  caret_movement.rs  chunk_layout.rs  chunk_materialization.rs  chunk_navigation.rs  chunk_prefetch.rs  clipboard_helpers.rs  commands.rs  drop_preview.rs  edit_pipeline.rs  equation_renderer.rs  formatting.rs  hit_testing.rs  item_sizes.rs  layout_access.rs  layout_prep.rs  lifecycle.rs  media.rs  mod.rs  mouse.rs  movement_core.rs  object_assets.rs  object_selection.rs  paste.rs  platform.rs  recovery.rs  render_blocks.rs  scroll_anchor.rs  search_highlights.rs  send_export.rs  serialization.rs  shrink_card.rs  style_mutation.rs  style_state.rs  table_equation_editing.rs  table_helpers.rs  tables.rs  traits.rs  (+2 more)
src/rich_text/layout/: block_layout.rs  decorations.rs  estimates.rs  format.rs  fragments.rs  hit_test.rs  mod.rs  paragraph_layout.rs  prep.rs  shaping.rs  table_layout.rs  types.rs  wrapping.rs
src/rich_text/tests/: decorations_drag_search.rs  edit_layout.rs  history_fragments.rs  history_tables.rs  mod.rs  persistence_blocks.rs  positions_formatting.rs  selection.rs
